<resources>
    <string name="app_name">Mobilalkfejl</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="email">Email</string>
    <string name="jelszo">Jelszó</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="csaladfa">Családfám</string>
    <string name="addfamily">Családtag hozzáadása</string>
    <string name="list">Családom listázása</string>
    <string name="title_activity_family_member_mod">FamilyMemberModActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>